--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -1,15 +1,32 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "..fullname" . }}
+  name: strapi-service
   labels:
-    {{- include "..labels" . | nindent 4 }}
+    app: strapi-service
 spec:
-  type: {{ .Values.service.type }}
+  type: NodePort
   ports:
-    - port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
-      name: http
+  - nodePort: 30002  # Vous pouvez changer le nodePort si nécessaire
+    port: 80
+    targetPort: 1337  # Port sur lequel Strapi est exposé
   selector:
-    {{- include "..selectorLabels" . | nindent 4 }}
+    app: strapi
+
+
+
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: strapi-service
+#   labels:
+#     app: strapi-service
+# spec:
+#     type: NodePort
+#     selector:
+#         app: strapi
+#     ports:
+#      - protocol: TCP
+#        port: 1337
+#        targetPort: 1337
+#        nodePort: 30002  # vous pouvez choisir un autre numéro de port si celui-ci est déjà utilisé
